--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscador Imágenes Pixabay</title>
+    <title>Buscador Imágenes Pixabay ..</title>
     <link rel="stylesheet" href="css/tailwind.min.css">
     <link rel="stylesheet" href="css/custom.css">
 </head>
